--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="celular">
+            <img src="img/cellphone.png" alt="Two cellphones with Instagram pages.">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+                <img src="img/instagram-logo.png" class="instagram-logo" alt="Instagram logo.">
                 <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+                    <img src="img/Perfil.JPG" alt="Profile picture.">
                 </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
+                <a href="#" class="instagram-login">Continue as louresb</a>
+                <a href="#" class="instagram-logout">Remove account</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
+                <p class="not-account">Not louresb?</p>
                 <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
-                    ou
-                    <span class="link-blue">Inscreva-se</span>
+                    <span class="link-blue">Switch accounts</span>
+                    or 
+                    <span class="link-blue">Sign up</span>
                 </p>
             </div>
             <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
+                <p class="get-app">Get the App</p>
                 <div class="download">
                     <a href="#" class="app-download"></a>
                     <a href="#" class="app-download"></a>
